# miniclaw

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  cli_main.py  manage.py  pyproject.toml  pytest.ini  ruff.toml  run-batch.bat  run-batch.py  run-parallel.bat  run-simplifier-parallel.ps1  run-simplifier.bat  shell.md
.claude/skills/code-simplifier/: SKILL.md
coder/: __init__.py  application.py  main.py  run.py  settings.py
coder/agent/: __init__.py  loop.py
coder/channels/: __init__.py  base.py  cli_channel.py  feishu_channel.py  manager.py  schema.py  telegram_channel.py
coder/cli/: __init__.py
coder/common/: bgtask.py  ctx.py  exception_handler.py  lazy_loader.py  logger.py  path.py  singleton.py  time.py
coder/components/agent/: __init__.py  loop.py
coder/components/channels/: __init__.py  base.py  cli_channel.py  feishu_channel.py  manager.py  schema.py  telegram_channel.py
coder/components/cli/: __init__.py
coder/components/concurrency/: __init__.py  queue.py
coder/components/delivery/: __init__.py  queue.py  runner.py
coder/components/gateway/: __init__.py  agent_manager.py  routing.py  server.py
coder/components/intelligence/: __init__.py  prompt_builder.py
coder/components/prompts/: __init__.py
coder/components/resilience/: __init__.py  failure.py  profile.py  runner.py
coder/components/scheduler/: __init__.py  cron.py  heartbeat.py
coder/components/session/: __init__.py  guard.py
coder/components/tools/: __init__.py  handlers.py  schema.py
coder/concurrency/: __init__.py  queue.py
coder/controllers/: __init__.py
coder/controllers/v1/: __init__.py
coder/delivery/: __init__.py  queue.py  runner.py
coder/gateway/: __init__.py  agent_manager.py  event_loop.py  routing.py  server.py
coder/intelligence/: __init__.py  bootstrap.py  memory.py  prompt_builder.py  skills.py
coder/middleware/: __init__.py  middlewares.py  performance.py
coder/prompts/: __init__.py
coder/resilience/: __init__.py  profile.py  runner.py
coder/scheduler/: __init__.py  cron.py  heartbeat.py
coder/schemas/: base.py
coder/session/: __init__.py  guard.py  store.py
coder/tools/: __init__.py  handlers.py  schema.py
docs/: batch-launcher-guide.md
docs/miniclaw-project/: s01_agent_loop.md  s02_tool_use.md  s05_gateway_routing.md  s06_intelligence.md  s09_resilience.md  s10_concurrency.md  s11_todo-list.md
docs/scaffold/: README.md
docs/your-claw-project/: resume.md  s02_tool_use.md  s03_sessions.md  s04_channels.md  s07_heartbeat_cron.md  s08_delivery.md  s09_resilience.md
extended/fastapi/: responses.py
openspec/: project.md
scripts/: __init__.py
scripts/dev/: __init__.py  check_dev.py  format_code.py  setup_dev.py
static/: index.html
tests/: __init__.py  conftest.py
tests/studies/: README.md
tests/tools/: test_todo.py
