[project]
name = "lowcode-coder-engine"
version = "0.1.0"
description = "低代码代码工具助手引擎"
maintainers = []
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
  # 配置管理
  "pydantic>=2.10.5",
  "pydantic-settings==2.8.1",
  # 时区处理
  "pytz==2025.2",
  # Agent 依赖 (s01)
  "litellm>=1.50.0",
  # 调度器依赖 (s07)
  "croniter>=3.0.0",
]

[project.optional-dependencies]
standard = []


[project.scripts]
# 开发脚本
setup-dev   = "scripts.dev.setup_dev:main"
check-dev   = "scripts.dev.check_dev:main"
format-code = "scripts.dev.format_code:main"
# 运行脚本
miniclaw = "coder.main:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coder", "scripts", "config"]

[tool.uv]
dev-dependencies = [
  # 测试
  "pytest~=8.3.5",
  "pytest-asyncio~=0.25.3",
  "pytest-env~=1.1.3",
  "pytest-benchmark~=4.0.0",
  "pytest-mock~=3.14.0",
  # 代码检查和格式化
  "dotenv-linter==0.6.0",
  "ruff==0.11.2",
  "pyright==1.1.391",
  "pre-commit==4.2.0",
  "commitizen==4.9.1",
  # 热更新
  "reloadium>=1.5.1",
]

# 配置包索引源
[[tool.uv.index]]
name    = "flydiy"
url     = "https://nexus.flydiysz.cn/repository/pypi-group/simple"
default = true

# Pyright 配置
[tool.pyright]
include = ["extended/**", "coder/**", "manage.py", "scripts/**", "tests/**"]
exclude = [
  "**/.ipynb_checkpoints",
  "**/.pytest_cache",
  "**/__pycache__",
  "**/.idea",
]
# 类型 stub 路径
stubPath = "."
# 额外的类型 stub 路径
extraPaths = ["."]
# 校验
reportImportCycles                  = false
reportUnusedCallResult              = false
reportUnusedParameter               = false
reportArgumentType                  = false
reportUnnecessaryIsInstance         = false
reportPossiblyUnboundVariable       = false
reportIncompatibleMethodOverride    = false
reportUninitializedInstanceVariable = false
reportImplicitOverride              = false
reportMissingImports                = false
reportMissingTypeStubs              = false
reportImplicitAbstractClass         = false
reportUnknownVariableType           = false
reportGeneralTypeIssues             = false
reportExplicitAny                   = false
reportMissingTypeArgument           = false
reportUnannotatedClassAttribute     = false
reportUntypedClassDecorator         = false
reportImplicitStringConcatenation   = false
reportUnknownParameterType          = false
reportUnknownArgumentType           = false
reportUnknownMemberType             = false
reportMissingParameterType          = false
reportUnusedFunction                = false
reportUnusedVariable                = false
reportAttributeAccessIssue          = false
reportOptionalMemberAccess          = false
reportAssignmentType                = false
reportUnusedImport                  = false
reportOperatorIssue                 = false
reportCallIssue                     = false
reportAny                           = false
deprecateTypingAliases              = false

# Commitizen 配置
[tool.commitizen]
name                     = "cz_conventional_commits"
version                  = "2.0.0"
tag_format               = "v$version"
version_provider         = "pep621"
update_changelog_on_bump = true
bump_message             = "bump: 版本从 $current_version 更新到 $new_version"
# 提交信息模板配置
[tool.commitizen.customize]
message_template = "{{change_type}}{{scope}}: {{message}}"
example = "feat(auth): 添加XXX功能"
schema = """
<type>(<scope>): <subject>
<BLANK LINE>
<body>
<BLANK LINE>
<footer>
"""
schema_pattern = "^(feat|fix|docs|style|refactor|test|chore|perf|ci|build|revert)(\\(.+\\))?: .{1,50}"
